force-app/main/default/objects/CustomerH__c/fields/CVC__c.field-meta.xml
<CustomField>
    <fullName>CVC__c</fullName>
    <label>CVC</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>