force-app/main/default/objects/CustomerH__c/fields/Is_User_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Logged_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies customers who place orders with or without logging in.</description>
    <label>Is User Logged In</label>
    <type>Checkbox</type>
</CustomField>