force-app/main/default/objects/CustomerH__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Street_Address__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>State__c</columns>
    <columns>Dietary_Preferences__c</columns>
    <columns>Notification_Preferences__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>